add sass variable

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,7 +1,5 @@
-:root {
-    --main-text: #757575;
-    --gray-text: #212121;
-    --blue-back: #2196F3;
-    --footer-back: #2F303A;
-    --icon-default: #AFB1B8;
-}
+$main-text: #757575;
+$gray-text: #212121;
+$blue-back: #2196F3;
+$footer-back: #2F303A;
+$icon-default: #AFB1B8;
