--- a/sass/components/_section-box.scss
+++ b/sass/components/_section-box.scss
@@ -2,7 +2,7 @@
     text-align: center;
 }
 .section-box-title {
-    color: var(--gray-text);
+    color: $gray-text;
     font-size: 36px;
     font-family: Roboto;
     font-weight: 700;
