--- a/sass/components/_section-feature.scss
+++ b/sass/components/_section-feature.scss
@@ -36,7 +36,7 @@
 
 
 .section-feature-title {
-    color: var(--gray-text);
+    color: $gray-text;
     font-size: 14px;
     font-family: Roboto;
     font-weight: 700;
