--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,9 @@
-:root {
-  --main-text: #757575;
-  --gray-text: #212121;
-  --blue-back: #2196F3;
-  --footer-back: #2F303A;
-  --icon-default: #AFB1B8;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   line-height: normal;
   font-style: normal;
-  color: var(--main-text);
+  color: #757575;
 }
 
 div.container {
@@ -55,7 +47,7 @@ button > span {
 }
 
 .header-logo-web {
-  color: var(--blue-back);
+  color: #2196F3;
   font-size: 26px;
   font-family: Raleway;
   font-weight: 700;
@@ -74,7 +66,7 @@ button > span {
 }
 
 .navigation {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 14px;
   font-family: Roboto;
   font-weight: 500;
@@ -98,7 +90,7 @@ button > span {
   position: absolute;
   top: 33px;
   left: 0;
-  border-bottom: 4px solid var(--blue-back);
+  border-bottom: 4px solid #2196F3;
   border-radius: 2px;
   height: 100%;
   width: 0;
@@ -107,6 +99,9 @@ button > span {
 .navigation-link:hover:after {
   /* width: 100%; */
   animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.navigation-link:hover {
+  color: #2196F3;
 }
 
 @keyframes navigation_underline {
@@ -135,14 +130,14 @@ button > span {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover {
-  color: var(--blue-back);
+  color: #2196F3;
 }
 .contact-link:hover .contact-link-svg {
-  fill: var(--blue-back);
+  fill: #2196F3;
 }
 
 .contact-link-svg {
-  fill: var(--main-text);
+  fill: #757575;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -207,7 +202,7 @@ button > span {
   border: 0;
   padding: 10px 32px;
   border-radius: 4px;
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
@@ -248,7 +243,7 @@ button > span {
 }
 
 .section-feature-title {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 14px;
   font-family: Roboto;
   font-weight: 700;
@@ -273,7 +268,7 @@ button > span {
 }
 
 .section-box-title {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 36px;
   font-family: Roboto;
   font-weight: 700;
@@ -346,7 +341,7 @@ figcaption {
 }
 
 .section-team-title {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 36px;
   font-family: Roboto;
   font-weight: 700;
@@ -356,7 +351,7 @@ figcaption {
 }
 
 .section-team-item-title {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
@@ -397,14 +392,14 @@ figcaption {
 }
 
 .team-icon-list__link:hover {
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   border-radius: 50%;
 }
 
 .team-list__svg {
   width: 20px;
   height: 20px;
-  fill: var(--icon-default);
+  fill: #AFB1B8;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -419,7 +414,7 @@ figcaption {
 }
 
 .section-clients-title {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 36px;
   font-family: Roboto;
   font-weight: 700;
@@ -441,7 +436,7 @@ figcaption {
 }
 
 .section-clients-list__link {
-  border: var(--icon-default) solid 1px;
+  border: #AFB1B8 solid 1px;
   border-radius: 4px;
   display: flex;
   height: 92px;
@@ -454,23 +449,23 @@ figcaption {
 }
 
 .section-clients-list__link:hover {
-  border-color: var(--blue-back);
+  border-color: #2196F3;
 }
 
 .clients-list__svg {
-  fill: var(--icon-default);
+  fill: #AFB1B8;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-clients-list__link:hover .clients-list__svg {
-  fill: var(--blue-back);
+  fill: #2196F3;
 }
 
 .footer {
   padding: 60px 0;
-  background-color: var(--footer-back);
+  background-color: #2F303A;
 }
 .footer .container {
   display: flex;
@@ -482,7 +477,7 @@ figcaption {
 }
 
 .footer-logo-web {
-  color: var(--blue-back);
+  color: #2196F3;
   font-size: 26px;
   font-family: Raleway;
   font-weight: 700;
@@ -531,7 +526,7 @@ figcaption {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-list__link:hover {
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   border-radius: 50%;
 }
 
@@ -572,7 +567,7 @@ figcaption {
   border: 0;
   padding: 10px 32px;
   border-radius: 4px;
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
