--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,17 +1,9 @@
-:root {
-  --main-text: #757575;
-  --gray-text: #212121;
-  --blue-back: #2196F3;
-  --footer-back: #2F303A;
-  --icon-default: #AFB1B8;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   line-height: normal;
   font-style: normal;
-  color: var(--main-text);
+  color: #757575;
 }
 
 div.container {
@@ -55,7 +47,7 @@ button > span {
 }
 
 .header-logo-web {
-  color: var(--blue-back);
+  color: #2196F3;
   font-size: 26px;
   font-family: Raleway;
   font-weight: 700;
@@ -74,7 +66,7 @@ button > span {
 }
 
 .navigation {
-  color: var(--gray-text);
+  color: #212121;
   font-size: 14px;
   font-family: Roboto;
   font-weight: 500;
@@ -98,7 +90,7 @@ button > span {
   position: absolute;
   top: 33px;
   left: 0;
-  border-bottom: 4px solid var(--blue-back);
+  border-bottom: 4px solid #2196F3;
   border-radius: 2px;
   height: 100%;
   width: 0;
@@ -107,6 +99,9 @@ button > span {
 .navigation-link:hover:after {
   /* width: 100%; */
   animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.navigation-link:hover {
+  color: #2196F3;
 }
 
 @keyframes navigation_underline {
@@ -135,14 +130,14 @@ button > span {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover {
-  color: var(--blue-back);
+  color: #2196F3;
 }
 .contact-link:hover .contact-link-svg {
-  fill: var(--blue-back);
+  fill: #2196F3;
 }
 
 .contact-link-svg {
-  fill: var(--main-text);
+  fill: #757575;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -198,7 +193,7 @@ button > span {
   line-height: 1.625;
   letter-spacing: 3%;
   text-align: center;
-  color: var(--gray-text);
+  color: #212121;
   padding: 6px 22px;
   background-color: #F5F4FA;
   border: 0;
@@ -209,7 +204,7 @@ button > span {
 }
 
 .portfolio-filters-btn:hover {
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   color: #FFF;
   box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
@@ -297,7 +292,7 @@ button > span {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 6%;
-  color: var(--gray-text);
+  color: #212121;
 }
 
 .portfolio-text {
@@ -305,12 +300,12 @@ button > span {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 3%;
-  color: var(--main-text);
+  color: #757575;
 }
 
 .footer {
   padding: 60px 0;
-  background-color: var(--footer-back);
+  background-color: #2F303A;
 }
 .footer .container {
   display: flex;
@@ -322,7 +317,7 @@ button > span {
 }
 
 .footer-logo-web {
-  color: var(--blue-back);
+  color: #2196F3;
   font-size: 26px;
   font-family: Raleway;
   font-weight: 700;
@@ -371,7 +366,7 @@ button > span {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-list__link:hover {
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   border-radius: 50%;
 }
 
@@ -412,7 +407,7 @@ button > span {
   border: 0;
   padding: 10px 32px;
   border-radius: 4px;
-  background-color: var(--blue-back);
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
