--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -3,7 +3,7 @@ body {
     font-weight: 400;
     line-height: normal;
     font-style: normal;
-    color: var(--main-text);
+    color: $main-text;
 }
 
 div.container {
