--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     padding: 60px 0;
-    background-color: var(--footer-back);
+    background-color: $footer-back;
     .container {
         display: flex;
         gap: 95px;
@@ -12,7 +12,7 @@
 }
 
 .footer-logo-web {
-    color: var(--blue-back);
+    color: $blue-back;
     font-size: 26px;
     font-family: Raleway;
     font-weight: 700;
@@ -61,7 +61,7 @@
     transition-duration: 1000ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &:hover {
-        background-color: var(--blue-back);
+        background-color: $blue-back;
         border-radius: 50%;
     }
 }
@@ -103,7 +103,7 @@
     border: 0;
     padding: 10px 32px;
     border-radius: 4px;
-    background-color: var(--blue-back);
+    background-color: $blue-back;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
