--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,7 +18,7 @@
 
 
 .header-logo-web {
-    color: var(--blue-back);
+    color: $blue-back;
     font-size: 26px;
     font-family: Raleway;
     font-weight: 700;
@@ -37,7 +37,7 @@
 }
 
 .navigation {
-    color: var(--gray-text);
+    color: $gray-text;
     font-size: 14px;
     font-family: Roboto;
     font-weight: 500;
@@ -60,7 +60,7 @@
         position: absolute;
         top: 33px;
         left: 0;
-        border-bottom: 4px solid var(--blue-back);
+        border-bottom: 4px solid $blue-back;
         border-radius: 2px;
         height: 100%;
         width: 0;
@@ -69,6 +69,9 @@
     &:hover:after {
         /* width: 100%; */
         animation: navigation_underline 500ms cubic-bezier(0.250, 0.250, 0.695, 0.490) 0s 1 normal forwards;
+    }
+    &:hover {
+        color:$blue-back;
     }
 }
 
@@ -106,10 +109,10 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &:hover {
-        color: var(--blue-back);
+        color: $blue-back;
     }
     &:hover .contact-link-svg {
-        fill: var(--blue-back);
+        fill: $blue-back;
     }
 }
 
@@ -117,7 +120,7 @@
 
 
 .contact-link-svg {
-    fill: var(--main-text);
+    fill: $main-text;
     transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
