--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -21,7 +21,7 @@
     line-height: 1.625;
     letter-spacing: 3%;
     text-align: center;
-    color: var(--gray-text);
+    color: $gray-text;
     padding: 6px 22px;
     background-color: #F5F4FA;
     border: 0;
@@ -33,7 +33,7 @@
 }
 
 .portfolio-filters-btn:hover {
-    background-color: var(--blue-back);
+    background-color: $blue-back;
     color: #FFF;
     box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
@@ -131,7 +131,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 6%;
-    color: var(--gray-text);
+    color: $gray-text;
 }
 
 .portfolio-text {
@@ -139,5 +139,5 @@
     font-size: 16px;
     line-height: 1.875;
     letter-spacing: 3%;
-    color: var(--main-text);
+    color: $main-text;
 }
