--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,28 +7,11 @@
     }
 }
 
-.footer-logo {
-    margin-bottom: 20px;
-}
+// .footer-logo {
+//     margin-bottom: 20px;
+// }
 
-.footer-logo-web {
-    color: $blue-back;
-    font-size: 26px;
-    font-family: Raleway;
-    font-weight: 700;
-    letter-spacing: 0.78px;
-    word-wrap: break-word;
-    margin-right: -5px;
-}
 
-.footer-logo-studio {
-    color: white;
-    font-size: 26px;
-    font-family: Raleway;
-    font-weight: 700;
-    letter-spacing: 0.78px;
-    word-wrap: break-word;
-}
 
 
 .footer-text {
